# crewai_research_assistant

./: README.md
research_assistant/: README.md  pyproject.toml
research_assistant/src/research_assistant/: crew.py  main.py  types.py
research_assistant/src/research_assistant/config/: agents.yaml  tasks.yaml
